# Multi_Agent_Stock_Trader

./: .gitignore  README.md  pyproject.toml
memory/: long_term_memory_storage.db
output/: decision.md  research_report.json  trending_companies.json
src/multi_agent_stock_trader/: crew.py  main.py
